# whisper-local

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SYNTAX-README.md  build.rs
scripts/: make_icons.py
src/: app_icon.rs  audio.rs  autostart.rs  config.rs  fonts.rs  inject.rs  lib.rs  main.rs  overlay.rs  postprocess.rs  settings_ui.rs  transcribe_ui.rs  tray.rs  whisper.rs
src/hotkey/: hook.rs  mod.rs  state.rs
target-lite/: .rustc_info.json
target-lite/release/: libwhisper_local.d  libwhisper_local.rlib  whisper-local.d
target-lite/release/.fingerprint/adler2-5c0f22dca76febc8/: lib-adler2  lib-adler2.json
target-lite/release/.fingerprint/aho-corasick-9a0eff65564fad09/: lib-aho_corasick  lib-aho_corasick.json
target-lite/release/.fingerprint/anstream-7c727d37caf1ee18/: lib-anstream  lib-anstream.json
target-lite/release/.fingerprint/anstyle-7baebc3ba89256ab/: lib-anstyle  lib-anstyle.json
target-lite/release/.fingerprint/anstyle-parse-b19bc44906bfc120/: lib-anstyle_parse  lib-anstyle_parse.json
target-lite/release/.fingerprint/anstyle-query-903e52d2f4a82c96/: lib-anstyle_query  lib-anstyle_query.json
target-lite/release/.fingerprint/anstyle-wincon-7f10fb11dcb78fb5/: lib-anstyle_wincon  lib-anstyle_wincon.json
target-lite/release/.fingerprint/anyhow-00e93adbfd0c7acb/: build-script-build-script-build  build-script-build-script-build.json
target-lite/release/.fingerprint/anyhow-eef32a691ee2812e/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-lite/release/.fingerprint/anyhow-f1f8200f1d59edbf/: lib-anyhow  lib-anyhow.json
target-lite/release/.fingerprint/arboard-173abc4bb24f8af9/: lib-arboard  lib-arboard.json
templates/helpers/: _common.py  claude.ps1  claude.py  llamacpp.ps1  llamacpp.py  lmstudio.ps1  lmstudio.py  ollama.ps1  ollama.py  openai.ps1  openai.py  openrouter.ps1  openrouter.py  vllm.ps1  vllm.py
templates/replace_maps/: ai.txt  global.txt  launch.txt  legal.txt  medical.txt  programming.txt
templates/syntax/: command_syntax.txt  regex_syntax.txt
tests/: audio_wav_test.rs  config_test.rs  hotkey_state_test.rs  whisper_test.rs
(+466 files in other folders)
