[package]
name    = "whisper-local"
version = "0.2.0"
edition = "2021"
publish = false
build   = "build.rs"

[build-dependencies]
winresource = "0.1"

[lib]
name = "whisper_local"
path = "src/lib.rs"

[[bin]]
name = "whisper-local"
path = "src/main.rs"

[features]
default = ["gui", "overlay-ui", "transcribe-file", "speaker-detection"]
# Anything that pulls eframe/egui/wgpu lives behind `gui`.
gui = ["dep:eframe", "dep:egui", "dep:rfd"]
# Floating recording overlay window (child process).
overlay-ui = ["gui"]
# Drag-and-drop file-transcribe window.
transcribe-file = ["gui"]
# Diarization + per-speaker copy/save UI in the file-transcribe window.
speaker-detection = ["transcribe-file"]

[dependencies]
anyhow       = "1"
log          = "0.4"
env_logger   = "0.11"
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"
dirs         = "5"
cpal         = "0.15"
rubato       = "0.15"
hound        = "3"
reqwest      = { version = "0.12", features = ["blocking", "multipart", "json"] }
serde_json   = "1"
crossbeam-channel = "0.5"
parking_lot  = "0.12"
once_cell    = "1"
eframe       = { version = "0.27", default-features = false, features = ["wgpu", "default_fonts"], optional = true }
egui         = { version = "0.27", optional = true }
tray-icon    = "0.13"
image        = { version = "0.25", default-features = false, features = ["png"] }
arboard      = "3"
regex        = "1"
md-5         = "0.10"
sha2         = "0.10"
webbrowser   = "0.8"
rfd          = { version = "0.14", default-features = false, optional = true }

[dependencies.windows]
version  = "0.56"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_System_JobObjects",
  "Win32_Graphics_Gdi",
]

[dev-dependencies]
wiremock   = "0.6"
tokio      = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto       = true
strip     = true
codegen-units = 1
